<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailedView">


    <TextView
        android:id="@+id/lot_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lot_number_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_name_label"
        app:layout_constraintStart_toStartOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lot_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="@+id/lot_number_label" />

    <TextView
        android:id="@+id/item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_category_label"
        app:layout_constraintStart_toStartOf="@+id/item_files_layout"
        app:layout_constraintTop_toBottomOf="@+id/lot_number_label" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="@+id/item_name_label" />

    <TextView
        android:id="@+id/item_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_category_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_period_label"
        app:layout_constraintStart_toStartOf="@+id/item_files_layout"
        app:layout_constraintTop_toBottomOf="@+id/item_name_label" />

    <TextView
        android:id="@+id/item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="@+id/item_category_label" />

    <TextView
        android:id="@+id/item_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_period_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_description_label"
        app:layout_constraintStart_toStartOf="@+id/item_files_layout"
        app:layout_constraintTop_toBottomOf="@+id/item_category_label" />

    <TextView
        android:id="@+id/item_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="@+id/item_period_label" />

    <TextView
        android:id="@+id/item_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_files_layout"
        app:layout_constraintStart_toStartOf="@+id/item_files_layout"
        app:layout_constraintTop_toBottomOf="@+id/item_period_label" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/item_files_layout"
        app:layout_constraintTop_toTopOf="@+id/item_description_label" />

    <LinearLayout
        android:id="@+id/item_files_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/item_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_description_label">

    </LinearLayout>

    <Button
        android:id="@+id/item_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_files_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>